Dark mode fix for the What is the SPI box.

--- a/Resources/stylesheets/blog.scss
+++ b/Resources/stylesheets/blog.scss
@@ -12,6 +12,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --post-rule: var(--dark-grey);
+
+    --what-is-background: var(--dark-blue);
   }
 }
 
